--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,13 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "sass": "^1.60.0",
+    "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
